// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar  1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dvIeIL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 nxubo"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 eLWzPC"
        >
          <button
            class="StyledButton-sc-323bzc-0 hiyJPE"
            type="button"
          >
            <svg
              aria-label="Menu"
              class="StyledIcon-ofa7kd-0 dEeaTZ"
              viewBox="0 0 24 24"
            >
              <path
                d="M2,19 L22,19 M2,5 L22,5 M2,12 L22,12"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eBVJAG"
          />
          <header
            class="StyledBox-sc-13pk1d4-0 dIHSGy"
          >
            <h3
              class="StyledHeading-sc-1rdh4aw-0 nltgZ"
            >
              My title
            </h3>
          </header>
        </div>
        <span
          class="StyledText-sc-1sadyjn-0 DkZvS"
        >
          Side item
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Sidebar  2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 nxubo"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eLWzPC"
      >
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eBVJAG"
        />
        <header
          class="StyledBox-sc-13pk1d4-0 dIHSGy"
        >
          <h3
            class="StyledHeading-sc-1rdh4aw-0 nltgZ"
          >
            title
          </h3>
        </header>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 DkZvS"
      >
        Side item
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Sidebar  3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 nxubo"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eLWzPC"
      >
        <button
          class="StyledButton-sc-323bzc-0 hiyJPE"
          type="button"
        >
          <svg
            aria-label="Menu"
            class="StyledIcon-ofa7kd-0 dEeaTZ"
            viewBox="0 0 24 24"
          >
            <path
              d="M2,19 L22,19 M2,5 L22,5 M2,12 L22,12"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eBVJAG"
        />
        <header
          class="StyledBox-sc-13pk1d4-0 dIHSGy"
        >
          <h3
            class="StyledHeading-sc-1rdh4aw-0 nltgZ"
          >
            title
          </h3>
        </header>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 DkZvS"
      >
        Side item
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Sidebar  4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kZPTpl"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eLWzPC"
      >
        <button
          class="StyledButton-sc-323bzc-0 hiyJPE"
          type="button"
        >
          <svg
            aria-label="Menu"
            class="StyledIcon-ofa7kd-0 dEeaTZ"
            viewBox="0 0 24 24"
          >
            <path
              d="M2,19 L22,19 M2,5 L22,5 M2,12 L22,12"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eBVJAG"
        />
        <header
          class="StyledBox-sc-13pk1d4-0 dIHSGy"
        >
          <h3
            class="StyledHeading-sc-1rdh4aw-0 nltgZ"
          >
            title
          </h3>
        </header>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 DkZvS"
      >
        Side item
      </span>
    </div>
  </div>
</DocumentFragment>
`;
